Fix shift in navbar on small screen due to incorrect font sizing

--- a/src/styles/scss/fonts.scss
+++ b/src/styles/scss/fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
   font-family: 'Montserrat';    
 	src: url(../../assets/Montserrat-Regular.ttf);
-	font-display: swap;
+	// font-display: swap;
 }
